# elodate

./: .gitignore  build-all.bat  build-all.sh  commands.txt
server/: .gitignore  Cargo.toml  access_codes.txt
server/src/: constants.rs  db.rs  elo.rs  lib.rs  logger.rs  main.rs  util.rs
server/src/bots/: bot_actions.rs  bot_manager.rs  fetch_users_and_swipe.rs  mod.rs  send_and_respond_to_chats.rs
server/src/middleware/: jwt.rs
server/src/middleware/key/: .gitignore  jwk.json
server/src/models/: access_code.rs  chat.rs  image.rs  message.rs  mod.rs  preference.rs  rating.rs  shared.rs  success.rs  user.rs
server/src/models/api_models/: api_chat.rs  api_image.rs  api_message.rs  api_rating.rs  api_user.rs  mod.rs  shared.rs
server/src/models/internal_models/: internal_access_code.rs  internal_chat.rs  internal_image.rs  internal_message.rs  internal_preferences.rs  internal_prefs.rs  internal_prefs_config.rs  internal_user.rs  mod.rs  shared.rs
server/src/mokuroku/: base32.rs  lib.rs  mod.rs
server/src/procedures/: add_rating.rs  get_user_set.rs  mod.rs  retrieve_chat_messages.rs  send_chat_message.rs  upsert_user.rs
server/src/routes/: check_username.rs  common.rs  delete_image.rs  delete_message.rs  delete_user.rs  fetch_notifications.rs  generate_access_codes.rs  get_additional_preferences.rs  get_chat_messages.rs  get_chats.rs  get_images.rs  get_internal_me.rs  get_me.rs  get_message.rs  get_messages.rs  get_my_chats.rs  get_next_users.rs  get_preferences_config.rs  get_prefs_config.rs  get_user_with_single_image.rs  get_users.rs  get_users_i_perfer_count.rs  get_users_i_perfer_count_dry_run.rs  get_users_mutual_perfer_count.rs  get_users_mutual_perfer_count_dry_run.rs  login.rs  mod.rs  put_image.rs  put_message.rs  put_user.rs  rate.rs  report.rs  report_bug.rs  send_message.rs  set_published.rs  shared.rs  signup.rs  update_user.rs  upload_img.rs
server/src/tasks/: mod.rs  tasks.rs  update_age.rs  update_elo.rs
server/src/test/: dummy_data.rs  fake.rs  mod.rs
server/src/vec/: mod.rs  search.rs  search_linear.rs  shared.rs  test.rs  vec_test.rs
server/tmp/test/asset_view_creation/: IDENTITY  LOG  OPTIONS-000011
server/tmp/test/counting_keys/: IDENTITY  LOG
server/tmp/test/empty_view_list/: IDENTITY  LOG  MANIFEST-000005
server/tmp/test/empty_view_name/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000011
server/tmp/test/index_cleanup/: 000016.sst  000018.sst  000020.sst  IDENTITY  LOG  LOG.old.1715485928361980  MANIFEST-000022  OPTIONS-000026  OPTIONS-000028
server/tmp/test/index_rebuild_delete/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000023
server/tmp/test/no_view_creation/: IDENTITY  LOG  OPTIONS-000009
server/tmp/test/open_drop_open/: 000012.sst  000013.sst  000014.sst  IDENTITY  LOG  LOG.old.1715485928340645  MANIFEST-000016
server/tmp/test/open_existing_empty/: IDENTITY  LOG
server/tmp/test/open_threaded/: IDENTITY  LOG
server/tmp/test/query_all_keys/: IDENTITY  LOG
server/tmp/test/query_by_key/: IDENTITY  LOG
server/tmp/test/query_by_key_separator/: IDENTITY  LOG
server/tmp/test/query_exact/: IDENTITY  LOG
server/tmp/test/query_greater_than/: IDENTITY  LOG
server/tmp/test/query_less_than/: IDENTITY  LOG
server/tmp/test/query_on_unknown_view/: IDENTITY  LOG
server/tmp/test/query_range_number/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000011
server/tmp/test/query_range_text/: IDENTITY  LOG
server/tmp/test/query_with_changes/: IDENTITY  LOG  MANIFEST-000005
(+159 files in other folders)
