[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
anyhow = { version = "1.0.60", optional = true }
rocksdb = "0.22.0"
thiserror = "1.0.32"
serde_cbor = "0.11.2"
paperclip = { version = "0.8.2", features = ["actix4"] }
rand = { version ="0.8.5" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
base64 = "0.22.0"
actix-cors = "0.7.0"
image = "0.25.1"
webp = "0.3.0"
fake = {version = "2.9.2", features = ["derive", "uuid"]}
async-mutex = "1.4.0"
rstar = "0.12.0"
paste = "1.0.15"
seeded-random = "0.6.0"
bincode = "1.3.3"

[dev-dependencies]
chrono = { version = "0.4.20", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.142", features = ["derive"] }
serde_cbor = "0.11.2"

[features]
multi-threaded-cf = ["rocksdb/multi-threaded-cf"]
