[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
paperclip = { version = "0.8.2", features = ["actix4", "actix-files"] }
rand = { version ="0.8.5" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
base64 = "0.22.0"
actix-cors = "0.7.0"
image = "0.25.1"
rand_distr = "0.4.3"
fake = "2.9.2"
kv = "0.24.0"
rkyv = { version = "0.7.44", features = ["validation"] }
actix-files = "0.6.5"
actix-service = "2.0.2"
reqwest = { version = "0.12.4", features = ["blocking"] }
log = "0.4.22"
env_logger = "0.11.3"
sled = "0.34.7"
dotenv = "0.15.0"


[profile.release]
opt-level = 3
lto = true         
codegen-units = 1  
strip = true      
